changed dot color fixed outline on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,6 @@ body {
 @media (max-width: 768px) {
   * {
     font-size: 14px;
-    outline: 1px solid yellowgreen;
   }
   .projects-grid {
     max-height: none;
@@ -165,7 +164,7 @@ body {
   border-radius: 45px;
   padding: 20px;
   position: relative;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgb(35, 35, 35);
   transition: all 0.3s ease;
 }
 .project-card:hover {
@@ -868,7 +867,6 @@ body {
 @media (max-width: 768px) {
   * {
     font-size: 14px;
-    outline: 1px solid yellowgreen;
   }
   .projects-grid {
     max-height: none;
