--- a/scss/base/_responsive.scss
+++ b/scss/base/_responsive.scss
@@ -22,7 +22,6 @@
 @media (max-width: 768px) {
   * {
     font-size: 14px;
-    outline: 1px solid yellowgreen;
   }
 
   .projects-grid {
